--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="rect5"></div>
       </div>
   </div>
-      <bgsound src="Missing You - Phuong Ly_ Tinle.mp3" loop="infinite">
+      <audio src="./sound/Missing You - Phuong Ly_ Tinle.mp3" autoplay></audio>
       <div id="bg"></div>
       <div class="content">
         <header>
